# vcpkg-test

./: .appveyor.yml  .editorconfig  .gitignore  CMakeLists.txt  README.md  bootstrap.bat  build.bat  clean.bat  install.bat  test.bat  test_libjpeg.cpp  test_libpng.cpp  test_libraw.cpp  test_sqlite3.cpp
